--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -14,6 +14,7 @@ sources:
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCXteDRy5qB0IjA8WPusCJ7w
   - href: https://anime.eiga.com/feed/news/rss.xml
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCtceiniicYEsbAVuWy-Bi0Q
+  - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCS1qLgofM70kUlI1Wu5uqxg
   - href: https://logipara.com/feed
   - href: https://note.com/hima_kuuhaku/rss
   - href: https://atsugi-lab.com/feed/
